# ev-charger-map

./: .gitignore  README.md  pyproject.toml
ev-chargers/: README.md
notebooks/: profiling.py  profiling_app.py  profiling_old.py
scripts/: __init__.py  download_arcgis_chargers.py  download_eredes_chargers.py  profile_dataset.py  utils.py
spec/: project_spec.md
student-grades/: StudentsPrediction.ipynb
