[project]
name = "ev-charger-map"
version = "0.1.0"
description = "Data acquisition and integration toolkit for EV charger analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "pandas>=2.1,<3",
]

[project.scripts]
download-arcgis-chargers = "scripts.download_arcgis_chargers:main"
download-eredes-chargers = "scripts.download_eredes_chargers:main"
profile-dataset = "scripts.profile_dataset:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
